# Projekt_Naukowy

./: .gitignore  README.md  pyproject.toml
configs/: flickr8k.yaml  flickr8k_regularized.yaml  flickr8k_strong.yaml  flickr8k_tuned.yaml
docs/: methodology.md  report.docx  report.md
results/replication-cluster-001/: config.yaml  metrics.json  run_flags.json  vocab.json
results/replication-cluster-001/retrieval_last/: retrieval_metrics.json  retrieval_table.csv  retrieval_table.md
results/replication-cluster-001/zeroshot_best/: prompt_ablation.csv  prompt_ablation.json
slides/: miniclip_reproduction.pptx  slides.md
src/miniclip_repro/: __init__.py  config.py  data.py  eval_retrieval.py  eval_zeroshot.py  losses.py  metrics.py  model.py  reproduce.py  run_all.py  tokenizer.py  train.py  utils.py
tests/: test_core.py
