[project]
name = "miniclip-repro"
version = "0.1.0"
description = "Laptop-scale reproduction of CLIP-style contrastive image-text training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniclip_repro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

